--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <packaging>war</packaging>
 
     <properties>
+        <log4j>1.2.17</log4j>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <spring.version>5.2.9.RELEASE</spring.version>
@@ -68,6 +69,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j}</version>
         </dependency>
 
     </dependencies>
