--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
-log4j.rootLogger=fileinfo, fileall, stdout
+log4j.rootLogger=DEBUG, fileinfo , fileall, stdout
 # Direct log messages to a log fileinfo
 log4j.appender.fileinfo=org.apache.log4j.RollingFileAppender
-log4j.appender.fileinfo.File=C:/Users/VK/Desktop/logging-info.log
+log4j.appender.fileinfo.File=C:/Users/VK/Desktop/logging1.log
 log4j.appender.fileinfo.MaxFileSize=500MB
 log4j.appender.fileinfo.MaxBackupIndex=10
 log4j.appender.fileinfo.layout=org.apache.log4j.PatternLayout
