--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,24 @@
+spring:
+  datasource:
+    hikari:
+      jdbc-url: "jdbc:postgresql://localhost:5432/student_demo"
+      maximum-pool-size: 10
+      driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: root
+    url: "jdbc:postgresql://localhost:5432/student_demo"
+    driver-class-name: org.postgresql.Driver
+
 server:
-  port: 8087
+  port: 8080
 
 ---
 
-database:
-  driver: org.postgresql.Driver
-  url: "jdbc:postgresql://localhost:5432/student_demo"
-  login: postgres
-  password: root
+#database:
+#  driver: org.postgresql.Driver
+#  url: "jdbc:postgresql://localhost:5432/student_demo"
+#  login: postgres
+#  password: root
 
 ---
 
