--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -1,4 +1,5 @@
 spring:
+  profiles: default
   flyway:
     enabled: true
     ignore-missing-migrations: true
@@ -11,7 +12,7 @@ spring:
   datasource:
     hikari:
       jdbc-url: "jdbc:postgresql://localhost:5432/student_demo"
-      maximum-pool-size: 10
+      maximum-pool-size: 5
       driver-class-name: org.postgresql.Driver
     username: postgres
     password: root
