--- a/web/pom.xml
+++ b/web/pom.xml
@@ -24,6 +24,12 @@
             <version>1.0.20210401213700</version>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.17.17</version>
+        </dependency>
+
     </dependencies>
 
 </project>
