--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
   flyway:
     enabled: true
     ignore-missing-migrations: true
@@ -27,3 +31,11 @@ security:
 jwtconfig:
   secret: secret
   expiration: 60000
+
+amazon:
+  serverURL: test
+  awsAccessKeyId: test
+  awsSecretKey: test
+  folder: test
+  bucket: test
+  region: test
